HBase Change Log
Release 0.19.1 - 03/19/2009
  BUG FIXES
   HBASE-1121  Cluster confused about where -ROOT- is
   HBASE-1148  Always flush HLog on root or meta region updates
   HBASE-1129  Master won't go down; stuck joined on rootScanner 
   HBASE-1138  Make HLog block size configurable
   HBASE-1175  HBA administrative tools do not work when specifying region
               names (Jonathan Gray via Andrew Purtell)
   HBASE-1190  TableInputFormatBase with row filters scan too far (Dave
               Latham via Andrew Purtell)
   HBASE-1198  OOME in IPC server does not trigger abort behavior
   HBASE-1224  Scanner returns values from before startrow
               (Ben Maurer via Stack)
   HBASE-1142  Cleanup thrift server; remove Text and profuse DEBUG messaging
               (Tim Sell via Stack)
   HBASE-1211  NPE in retries exhausted exception
   HBASE-1233  Transactional fixes: Overly conservative scan read-set,
               potential CME (Clint Morgan via Stack)
   HBASE-1185  wrong request/sec in the gui reporting wrong
   HBASE-1238  Under upload, region servers are unable 
               to compact when loaded with hundreds of regions
   HBASE-1247  checkAndSave doesn't Write Ahead Log
   HBASE-1243  oldlogfile.dat is screwed, so is it's region
   HBASE-1169  When a shutdown is requested, stop scanning META regions
               immediately
   HBASE-1219  Scanners can miss values riding the flush transition
   HBASE-1220  Don't reopen file if already open when updating readers
               underneath scanners
   HBASE-1256  NPE in StoreFileScanner durring cache flush
   HBASE-1303  Secondary index configuration prevents HBase from starting
               (Ken Weiner via Stack)


  IMPROVEMENTS
   HBASE-845   HCM.isTableEnabled doesn't really tell if it is, or not
   HBASE-903   [shell] Can't set table descriptor attributes when I alter a table
   HBASE-1178  Add shutdown command to shell